Bug fixes, added an eye

--- a/options.css
+++ b/options.css
@@ -147,7 +147,7 @@ header {
       display: block;
       float: right;
       height: 16px;
-      margin: 3px 5px 0 0;
+      margin: 0 5px 0 0;
       opacity: 0.5;
       text-align: center;
       width: 16px;
