--- a/popup.css
+++ b/popup.css
@@ -6,14 +6,32 @@
   font: 1em/1.2em Lato, Helvetica, "Segoe UI", Verdana, Arial, sans-serif;
 }
 
+html {
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   background: #7ec9d2;
-  height: 325px;
+  height: 100%;
+  min-height: 100%;
   margin: 0;
   min-width: 280px;
   padding: 0;
   text-align: center;
   width: 100%;
+}
+
+#overlay {
+  background: rgba(0,0,0,0.4);
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  display: none;
 }
 
 /* Outline colour */
@@ -149,8 +167,46 @@ header {
 
   #passphrase {
     background: #cee6e9;
-    margin-right: 10px;
-    width: calc(100% - 50px);
+    width: calc(100% - 75px);
+  }
+
+  input[type=checkbox] {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+  }
+
+  input[type=checkbox]:checked + label {
+    background-position: 0 0;
+  }
+
+  input[type=checkbox] + label {
+    background-position: 0 -27px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    display: inline-block;
+    height: 16px;
+    line-height: 16px;
+    vertical-align: middle;
+  }
+
+  .eye {
+    background: transparent url(img/eye.png) no-repeat;
+    border-radius: 0 5px 5px 0;
+    padding: 6px 5px 5px 22px;
+    font-size: 0;
+    margin: 0 3px;
+    opacity: 0.6;
+    transition: opacity 0.15s;
+  }
+
+  .eye:hover {
+    opacity: 1;
   }
 
   #random {
