--- a/popup.css
+++ b/popup.css
@@ -14,24 +14,11 @@ html {
 body {
   background: #7ec9d2;
   height: 100%;
-  min-height: 100%;
   margin: 0;
   min-width: 280px;
   padding: 0;
   text-align: center;
   width: 100%;
-}
-
-#overlay {
-  background: rgba(0,0,0,0.4);
-  width: 100%;
-  height: 100%;
-  min-height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10000;
-  display: none;
 }
 
 /* Outline colour */
@@ -170,7 +157,7 @@ header {
     width: calc(100% - 75px);
   }
 
-  input[type=checkbox] {
+  #passphrase-visible {
     position: absolute;
     overflow: hidden;
     clip: rect(0 0 0 0);
@@ -181,11 +168,11 @@ header {
     border: 0;
   }
 
-  input[type=checkbox]:checked + label {
+  #passphrase-visible:checked + .eye {
     background-position: 0 0;
   }
 
-  input[type=checkbox] + label {
+  #passphrase-visible + .eye {
     background-position: 0 -27px;
     background-repeat: no-repeat;
     cursor: pointer;
